<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/iv_openble"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/bleclose"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="17dp"
            android:text="@string/openble"
            android:textSize="20sp"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="3dp"
        android:background="#D6D6D6"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_youself"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical"
            android:text="@string/yourSelf"/>

        <TextView
            android:gravity="right|center_vertical"
            android:layout_marginRight="25dp"
            android:layout_weight="1"
            android:id="@+id/tv_blue"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/no"
            android:textColor="#32C27D"/>
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#D6D6D6"/>

    <LinearLayout
        android:id="@+id/ll_collect"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:text="@string/current_device"/>

        <TextView
            android:gravity="right|center_vertical"
            android:layout_marginRight="25dp"
            android:layout_weight="1"
            android:id="@+id/tv_show"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/no"
            android:textColor="#32C27D"/>
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#D6D6D6"/>

    <TextView
        android:id="@+id/tv_bond"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:textStyle="bold"
        android:gravity="center_vertical"
        android:text="已配对设备"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#D6D6D6"/>

    <ListView
        android:id="@+id/lv_bond_ble"
        android:orientation="vertical"
        android:visibility="gone"
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#D6D6D6"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/tv_list"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical"
            android:text="@string/device_list"/>

        <ProgressBar
            android:id="@+id/progressBar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="7dp"
            android:gravity="center_vertical"
            android:visibility="invisible"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#D6D6D6"/>

    <ListView
        android:id="@+id/lv_ble"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="10dp"
        android:visibility="invisible"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:text="@string/start_scan"
            android:textColor="#FFFFFF"/>

        <Button
            android:id="@+id/btn_uncon"
            android:layout_width="0dp"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:text="@string/uncon"
            android:textColor="#FFFFFF"/>

    </LinearLayout>

</LinearLayout>